--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_Shell C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(C_Shell main.c)
+add_executable(C_Shell main.c built_in_functions.h)
